[gd_scene load_steps=26 format=3 uid="uid://cy0inu5tex1c7"]

[ext_resource type="Script" path="res://entities/enemy/enemy.gd" id="1_anygm"]
[ext_resource type="PackedScene" uid="uid://didxokr78usqq" path="res://entities/enemy/assets/Crab.gltf" id="2_le1bf"]
[ext_resource type="Animation" uid="uid://brr1mgfbmqefd" path="res://entities/enemy/assets/animations/Idle.res" id="3_waxwc"]
[ext_resource type="Animation" uid="uid://0i6jgn6obr85" path="res://entities/enemy/assets/animations/HitRecieve.res" id="4_2xr2h"]
[ext_resource type="Animation" uid="uid://dkwlstvo1sc3b" path="res://entities/enemy/assets/animations/Walk.res" id="5_fl6dm"]
[ext_resource type="Animation" uid="uid://d00u2mn4e21ip" path="res://entities/enemy/assets/animations/Bite_Front.res" id="6_a0tah"]
[ext_resource type="Animation" uid="uid://bkn0i3ymflowo" path="res://entities/enemy/assets/animations/Death.res" id="7_qtfgx"]
[ext_resource type="Script" path="res://scripts/components/attack_receiver.gd" id="8_yg6xh"]
[ext_resource type="AudioStream" uid="uid://ci3go3om8kawk" path="res://entities/enemy/assets/hit.mp3" id="9_vs7sm"]
[ext_resource type="AudioStream" uid="uid://cmold4g60qki" path="res://entities/enemy/assets/bodyfall.mp3" id="10_d61up"]
[ext_resource type="Script" path="res://scripts/components/player_damager.gd" id="11_j73wa"]
[ext_resource type="Script" path="res://scripts/custom_resources/attack_data.gd" id="12_2kk2m"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yw8ll"]
_data = {
"Bite_Front": ExtResource("6_a0tah"),
"Death": ExtResource("7_qtfgx"),
"HitRecieve": ExtResource("4_2xr2h"),
"Idle": ExtResource("3_waxwc"),
"Walk": ExtResource("5_fl6dm")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_x5v2l"]
size = Vector3(1.5817, 1.45886, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fsxn4"]
radius = 15.2421

[sub_resource type="BoxShape3D" id="BoxShape3D_jr4ex"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lp1tq"]
animation = &"Bite_Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pbrs5"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d78hr"]
animation = &"HitRecieve"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_luyhm"]
animation = &"Idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_fbgpk"]
fadein_time = 0.1
fadeout_time = 0.2

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_34m7o"]
mix_mode = 1
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_ynwmx"]
xfade_time = 0.1
input_0/name = "idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "walk"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_nqohi"]
graph_offset = Vector2(-204, 2)
nodes/Animation/node = SubResource("AnimationNodeAnimation_luyhm")
nodes/Animation/position = Vector2(-200, 40)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_lp1tq")
"nodes/Animation 2/position" = Vector2(-180, 320)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_pbrs5")
"nodes/Animation 3/position" = Vector2(-200, 200)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_d78hr")
"nodes/Animation 4/position" = Vector2(60, 420)
nodes/Attack/node = SubResource("AnimationNodeOneShot_fbgpk")
nodes/Attack/position = Vector2(200, 160)
nodes/Hit/node = SubResource("AnimationNodeOneShot_34m7o")
nodes/Hit/position = Vector2(440, 220)
nodes/Transition/node = SubResource("AnimationNodeTransition_ynwmx")
nodes/Transition/position = Vector2(-20, 80)
nodes/output/position = Vector2(540, 140)
node_connections = [&"Attack", 0, &"Transition", &"Attack", 1, &"Animation 2", &"Hit", 0, &"Attack", &"Hit", 1, &"Animation 4", &"Transition", 0, &"Animation", &"Transition", 1, &"Animation 3", &"output", 0, &"Hit"]

[sub_resource type="Resource" id="Resource_dmo73"]
script = ExtResource("12_2kk2m")
base_damage = 5
critical_multiplier = 0.0
critical_chance = 0
is_splash = false
type = 0

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
axis_lock_linear_y = true
script = ExtResource("1_anygm")
max_speed = 3.0

[node name="Crab2" parent="." instance=ExtResource("2_le1bf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Crab2/MonsterArmature" index="0"]
bones/0/position = Vector3(0, 0.0135069, -0.108169)
bones/0/rotation = Quaternion(0.028156, 0, 0, 0.999604)
bones/2/position = Vector3(0, 0.41962, 0)
bones/2/rotation = Quaternion(0.0377914, 0, -7.45721e-18, 0.999286)
bones/4/rotation = Quaternion(0.011528, 0, -2.3692e-10, 0.999934)
bones/5/position = Vector3(-0.501702, 0.391603, 0.448326)
bones/6/position = Vector3(0.501702, 0.391603, 0.448326)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Crab2")
libraries = {
"": SubResource("AnimationLibrary_yw8ll")
}

[node name="AttackReceiver" type="Node" parent="." node_paths=PackedStringArray("root", "detection_area")]
script = ExtResource("8_yg6xh")
root = NodePath("..")
max_health = 20
text = "Crab"
detection_area = NodePath("../DetectionArea")
weakness = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.042099, 0.729431, 0)
shape = SubResource("BoxShape3D_x5v2l")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.042099, 0.729431, 0)
shape = SubResource("CylinderShape3D_fsxn4")

[node name="PlayerHurtArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlayerHurtArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.042099, 0.729431, -1)
shape = SubResource("BoxShape3D_jr4ex")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vs7sm")
volume_db = 10.0
pitch_scale = 0.65

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_d61up")
volume_db = 5.0

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Crab2")
tree_root = SubResource("AnimationNodeBlendTree_nqohi")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/active = false
parameters/Attack/internal_active = false
parameters/Attack/request = 0
parameters/Hit/active = false
parameters/Hit/internal_active = false
parameters/Hit/request = 0
parameters/Transition/current_state = "walk"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 1

[node name="PlayerDamager" type="Node" parent="." node_paths=PackedStringArray("area")]
script = ExtResource("11_j73wa")
attack = SubResource("Resource_dmo73")
area = NodePath("../PlayerHurtArea")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="PlayerHurtArea" to="." method="_on_player_hurt_area_body_entered"]
[connection signal="body_exited" from="PlayerHurtArea" to="." method="_on_player_hurt_area_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]

[editable path="Crab2"]
